# algorithm-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
algorithm-rag/: README.md
algorithm-rag/backend/: auth.py  config.py  database.py  document_processor.py  embedding.py  main.py  prompts.py  rag.py  requirements.txt  schemas.py  seed.py  vector_store.py
algorithm-rag/backend/sample_data/: common_algorithms.md
algorithm-rag/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
algorithm-rag/frontend/app/: globals.css  layout.tsx
algorithm-rag/frontend/app/admin/: page.tsx
algorithm-rag/frontend/app/admin/conversations/[id]/: page.tsx
algorithm-rag/frontend/app/chat/: page.tsx
algorithm-rag/frontend/app/login/: page.tsx
algorithm-rag/frontend/app/register/: page.tsx
algorithm-rag/frontend/components/: markdown-view.tsx  ui.tsx
algorithm-rag/frontend/lib/: api.ts  labels.ts
