[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "jos>=0.1.2",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pypdf>=6.12.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
